[workspace]
default-members = ["game"]
members = ["crates/*", "game"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
psp = "0.3.6"
bytemuck = { version = "1.14.0", features = ["must_cast"] }
uninit = { version = "0.5.1", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
