[package]
name = "gltf_converter"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
psp_file_formats = { path = "../../crates/file_formats" }
psp_mesh_writer = { path = "../../crates/mesh_writer" }

aligned-vec = { workspace = true }
bytemuck = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }

clap = { version = "4.4.6", features = ["derive"] }
image = { version = "0.24.7", default-features = false }
gltf = { version = "1.3.0", features = ["KHR_materials_unlit"] }
itertools = { version = "0.11.0" }
texpresso = { version = "2.0.1" }
